--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
-                <h1 class="header-title">Mariana Sousa</h1>
-                <h6 class="header-mono" >Engineering and Management | IT Consultant</h6>
+                <h1 class="header-title">John Doe</h1>
+                <h6 class="header-mono" >Frond end Designer | Developer</h6>
                 <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
             </div>
         </div>
@@ -38,13 +38,13 @@
             <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">About Me</a>
+                        <a href="#about" class="nav-link">ABOUT ME</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link">Experience/Career</a>
+                        <a href="#resume" class="nav-link">EXPERIENCE/CAREER</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
@@ -56,10 +56,10 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#portfolio" class="nav-link">Other Links</a>
+                        <a href="#portfolio" class="nav-link">OTHER LINKS</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#blog" class="nav-link">Contacts</a>
+                        <a href="#blog" class="nav-link">CONTACTS</a>
                     </li>
                     <li class="nav-item last-item">
                         <a href="#contact" class="nav-link">Contact</a>
