--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#portfolio" class="nav-link">Other Links</a>
+                        <a href="#portfolio" class="nav-link">Skills/Awards</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#blog" class="nav-link">Contacts</a>
+                        <a href="#blog" class="nav-link">Interests/Hobbies</a>
                     </li>
                     <li class="nav-item last-item">
-                        <a href="#contact" class="nav-link">Contact</a>
+                        <a href="#contact" class="nav-link">Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
     </nav>
     <div class="container-fluid">
         <h2 class="mb-5"><span class="text-danger">My</span>About Me</h2>
-        <h3 class="font-weight-light">Who am I ?</h3>
+        <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
         <!-- <div id="about" class="row about-section">
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
