--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+    <!-- comentei este codigo que correspondia ao componenres que aparecia de lado -->
     <!-- <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a> -->
+
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
@@ -29,6 +31,7 @@
             </div>
         </div>
     </header>
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
         <div class="container">
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,9 +60,9 @@
                     <li class="nav-item">
                         <a href="#portfolio" class="nav-link">Skills/Awards</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="#blog" class="nav-link">Interests/Hobbies</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item last-item">
                         <a href="#contact" class="nav-link">Contacts</a>
                     </li>
