--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     <li class="nav-item">
                         <a href="#portfolio" class="nav-link">Skills/Awards</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a href="#blog" class="nav-link">Interests/Hobbies</a>
-                    </li> -->
+                    </li>
                     <li class="nav-item last-item">
                         <a href="#contact" class="nav-link">Contacts</a>
                     </li>
@@ -70,7 +70,8 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid"> -->
+        <div class="container">
         <h2 class="mb-5"><span class="text-danger">My</span>About Me</h2>
         <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
         <!-- <div id="about" class="row about-section">
