--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     </nav>
     <!-- <div class="container-fluid"> -->
         <div class="container">
-        <h2 class="mb-5"><span class="text-danger">My</span>About Me</h2>
-        <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
+        <h2 class="mb-5"><span class="text-danger">About Me</span></h2>
+        <h3 class="font-weight-light">Who am I ?</h3>
         <!-- <div id="about" class="row about-section">
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
