--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">About Me</a>
+                        <a href="#about me" class="nav-link">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a href="#resume" class="nav-link">Experience/Career</a>
@@ -70,10 +70,12 @@
             </div>
         </div>
     </nav>
-    <!-- <div class="container-fluid"> -->
-        <div class="container">
+    <!-- About Me section -->
+    <section class="section" id="about me">
+     <div class="container-fluid">
         <h2 class="mb-5"><span class="text-danger">About Me</span></h2>
-        <h3 class="font-weight-light">Who am I ?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet nesciunt qui sit velit delectus voluptates, repellat ipsum culpa id deleniti. Rerum debitis facilis accusantium neque numquam mollitia modi quasi distinctio.</p>
+        <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
         <!-- <div id="about" class="row about-section">
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
@@ -129,7 +131,8 @@
                 </div>
             </div>
         </div> -->
-    </div>
+     </div>
+   </section>
 
     <!--Resume Section-->
     <section class="section" id="resume">
