--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about me" class="nav-link">About Me</a>
+                        <a href="#about-me" class="nav-link">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a href="#resume" class="nav-link">Experience/Career</a>
@@ -71,7 +71,7 @@
         </div>
     </nav>
     <!-- About Me section -->
-    <section class="section" id="about me">
+    <section class="about-section" id="about-me">
      <div class="container-fluid">
         <h2 class="mb-5"><span class="text-danger">About Me</span></h2>
         <p> I am an engineer in Industrial Engineering and Management with some experience in application development and design/planning processes. I am passionate about understanding how things work and challenging myself. I have special interest in project management, programming and strategic planning issues. Additionally I have been focus in deepening my knowledge in the people management field. 
