--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- About Me section -->
     <section class="about-section" id="about-me">
      <div class="container-fluid">
-        <h2 class="mb-5"><span class="text-danger">About Me</span></h2>
+        <h2 class="mb-5">About<span class="text-danger">Me</span></h2>
         <p> I am an engineer in Industrial Engineering and Management with some experience in application development and design/planning processes. I am passionate about understanding how things work and challenging myself. I have special interest in project management, programming and strategic planning issues. Additionally I have been focus in deepening my knowledge in the people management field. 
             I describe myself as ambitious, curious, empathetic and a creative person.</p>
         <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
