--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </nav>
     <!-- About Me section -->
-    <section class="about-section" id="about-me">
+    <section class="row about-section" id="about-me">
      <div class="container-fluid">
         <h2 class="mb-5">About<span class="text-danger">Me</span></h2>
         <p> I am an engineer in Industrial Engineering and Management with some experience in application development and design/planning processes. I am passionate about understanding how things work and challenging myself. I have special interest in project management, programming and strategic planning issues. Additionally I have been focus in deepening my knowledge in the people management field. 
