--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </nav>
     <!-- About Me section -->
-    <section class="row about-section" id="about-me">
+    <section class="about-section" id="about-me">
      <div class="container">
         <h2 class="mb-5">About<span class="text-danger"> Me </span></h2>
         <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a decade ago.
@@ -141,8 +141,9 @@
                 </div>
             </div>
         </div> -->
+
      </div>
-   </section>
+    </section>
 
     <!--Resume Section-->
     <section class="section" id="resume">
