--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
     <!-- About Me section -->
     <section class="about-section" id="about-me">
-     <div class="container">
+     <div class="container2">
         <h2 class="mb-5">About<span class="text-danger"> Me </span></h2>
         <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a decade ago.
 
