--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             opening ourselves up to new realities.</p>
 
         <p> I have a master's degree in Industrial Engineering and Management from FEUP. Later, in the world of work,
-            I had a opportunity to gain some experience in application development, as well as process design and planning.
+            I had a opportunity to gain some experience in application development, as well as, process design and planning.
             I'm particularly interested in topics related to project management, programming and people management.</p>
             
         <p> Finally, I seek both personal and professional growth, and I value work-life balance,
             so I have a wide range of interests and hobbies.
         </p>
-        
+
         <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
         <!-- <div id="about" class="row about-section">
             <div class="col-lg-4 about-card">
