--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </nav>
     <!-- About Me section -->
-    <section class="about-section" id="about-me">
+    <section class="section" id="about-me">
      <div class="container">
         <h2 class="mb-5">About<span class="text-danger"> Me </span></h2>
         <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a decade ago. </p>
