--- a/index.html
+++ b/index.html
@@ -168,10 +168,8 @@
                             <a href="#">Accenture</a>
                         </p>
                         
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet nesciunt qui sit velit delectus voluptates, repellat ipsum culpa id deleniti. Rerum debitis facilis accusantium neque numquam mollitia modi quasi distinctio.</p>
-
-                        <p><b>Necessitatibus nihil impedit! Ex nisi eveniet, dolor aliquid consequuntur repudiandae.</b></p>
-                        <p>Magnam in repellat enim harum omnis aperiam! Explicabo illo, commodi, dolor blanditiis cupiditate harum nisi vero accusamus laudantium voluptatibus dolores quae obcaecati.</p> -->
+                        <p><b>Keywords:</b> ABAP; ABAP-OO; Advanced Business Application Programming (ABAP); 
+                            Eclipse, Microsoft Excel; International teams; Communication; Spanish </p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
