--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
                             <a href="#">LIPOR</a>
                         </p>
                         
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit excepturi laborum enim, vitae ipsam atque eum, ad iusto consequuntur voluptas, esse doloribus. Perferendis porro quisquam vitae exercitationem aliquid, minus eos laborum repudiandae, cumque debitis iusto omnis praesentium? Laborum placeat sit adipisci illum tempore maxime, esse qui quae? Molestias excepturi corporis similique doloribus. Esse vitae earum architecto nulla non dolores illum at perspiciatis quod, et deleniti cupiditate reiciendis harum facere, delectus eum commodi soluta distinctio sit repudiandae possimus sunt. Ipsum, rem.</p> -->
+                        <p><b>Keywords: </b> Microsoft Excel; VBA (Visual Basic for Applications); LaTeX; 
+                            Lean Six Sigma; BPM Business Process Modeling; 
+                            Product Quality Control; Material Requirement Planning (MRP) </p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
