--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
                             <li>Supply chain logistical planning, with MRP development;</li>
                             <li>Define KPIs and develop monitoring tools;</li>
                             <li>Define requirements, procedures and create protocols to ensure the quality of the components;</li>
-                            <li>Design and support the implementation of the layout of the wareHouse and the workplace;</li>
-                                
+                            <li>Design and support the implementation of the layout of the wareHouse and the workplace;</li>                             
                         </ul>
                         
                         <p><b>Keywords: </b> Microsoft Excel; VBA (Visual Basic for Applications); LaTeX; 
@@ -213,6 +212,7 @@
                             Product Quality Control; Material Requirement Planning (MRP) </p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://www.google.com" target="_blank" rel="noopener noreferrer">Abrir Google</a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
