--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             Product Quality Control; Material Requirement Planning (MRP) </p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
-                        <a href="https://www.google.com" target="_blank" rel="noopener noreferrer">Abrir Google</a>
+                        <a href="https://wallie.com.pt/" target="_blank" rel="Wallie">Wallie</a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
