--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                             Lean Six Sigma; BPM Business Process Modeling; 
                             Product Quality Control; Material Requirement Planning (MRP) </p>
 
+                        <p>This product is already on the market, find out more:<a href="https://wallie.com.pt/" target="_blank" rel="Wallie">Wallie</a></p>
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
-                        <a href="https://wallie.com.pt/" target="_blank" rel="Wallie">Wallie</a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
