--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             </div>
         </div>
     </nav>
+
     <!-- About Me section -->
     <section class="section" id="about-me">
      <div class="container">
@@ -211,7 +212,7 @@
                             Lean Six Sigma; BPM Business Process Modeling; 
                             Product Quality Control; Material Requirement Planning (MRP) </p>
 
-                        <p><b>This product is already on the market, find out more:</b>
+                        <p>This product is already on the market, find out more:
                            <a href="https://wallie.com.pt/" target="_blank" rel="Wallie"> Wallie</a></p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
@@ -874,7 +875,7 @@
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
     
     <!-- Google mpas -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script> -->
 
     <!-- JohnDoe js -->
     <script src="assets/js/johndoe.js"></script>
