--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- About Me section -->
-    <section class="section bg-dark" id="about-me">
+    <section class="section" id="about-me">
      <div class="container">
         <h2 class="mb-5">About<span class="text-danger"> Me </span></h2>
         <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a decade ago. </p>
@@ -154,7 +154,7 @@
     </section>
 
     <!--Experince/career Section-->
-    <section class="section" id="experience">
+    <section class="section bg-dark" id="experience">
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
             <div class="row">
