--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
     <!--Experince/career Section-->
     <section class="section bg-dark" id="experience">
         <div class="container">
-            <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
-            <div class="row">
+            <h2 class="mb-5 text-light"><span class="text-danger">Work</span> Experience </h2>
+            <div class="row text-light">
                 <div class="blog-card">
                     <div class="img-holder">
                         <img src="assets/imgs/Accenture-Logo.png" alt="Accenture">
@@ -221,6 +221,9 @@
                 <!-- blog-card -->
             </div>
         </div>
+
+
+        
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
             <div class="row">
