--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
     </section>
 
     <!--Experince/career Section-->
-    <section class="section bg-dark" id="experience">
+    <section class="section" id="experience">
         <div class="container">
             <h2 class="mb-5 text-light"><span class="text-danger">Work</span> Experience </h2>
-            <div class="row text-light">
+            <div class="row">
                 <div class="blog-card">
                     <div class="img-holder">
                         <img src="assets/imgs/Accenture-Logo.png" alt="Accenture">
@@ -223,7 +223,7 @@
         </div>
 
 
-        
+
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
             <div class="row">
