--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!--Experince/career Section-->
     <section class="section" id="experience">
         <div class="container">
-            <h2 class="mb-5 text-light"><span class="text-danger">Work</span> Experience </h2>
+            <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
             <div class="row">
                 <div class="blog-card">
                     <div class="img-holder">
