--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
     <!-- About Me section -->
     <section class="section" id="about-me">
      <div class="container">
-        <div class = "container_title">
-            <h2 class="mb-5">About<span class="text-danger"> Me </span></h2> 
-        </div>
-        <!-- <h2 class="mb-5">About<span class="text-danger"> Me </span></h2> -->
+        <h2 class="mb-5">About<span class="text-danger"> Me </span></h2>
         <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a decade ago. </p>
 
         <p>I'm a creative soul, curious and fascinated by life. I like to challenge myself in the various
@@ -158,6 +155,9 @@
 
     <!--Experince/career Section-->
     <section class="section" id="experience">
+        <div class = "container_title">
+           <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
+        </div>
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
             <div class="row">
