--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
      </div>
     </section>
 
-    <!--Experince/career Section-->
+    <!--Experience/career Section-->
     <section class="section" id="experience">
         <div class = "container_title">
-           <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
+           <h2 class="mb-5">Experience/Career</h2>
         </div>
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
