--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!--Experience/career Section-->
     <section class="section" id="experience">
         <div class = "container_title">
-           <h2 class="mb-5">Experience/Career</h2>
+           <h4 class="subtitle" >Experience/Career</h4>
         </div>
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
