--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
     </section>
 
     <!--Experience/career Section-->
-    <div class = "container_title">
+    <div class = "container_title career" id="experience">
         <h4 class="subtitle" >Experience/Career</h4>
      </div>
-    <section class="section" id="experience">
+    <section class="section">
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">Work</span> Experience </h2>
             <div class="row">
