--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
     </section>
 
     <!--Experience/career Section-->
-    <div class = "container_title career" id="experience">
-        <h4 class="subtitle" >Experience/Career</h4>
+    <div class = "container_title" id="experience">
+        <h4 class="career subtitle" >Experience/Career</h4>
      </div>
     <section class="section">
         <div class="container">
