--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="row">
                 <div class="blog-card">
                     <div class="img-holder">
-                        <img src="assets/imgs/FEUP_Logo.png" alt="FEUP">
+                        <img src="assets/imgs/FEUP_logo.png" alt="FEUP">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">Bachelor & Master in Industrial Engineering and Management</h6>
