--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
                         
                 
                     </div>
-                    <div class="blog-card">
+                </div>
+
+                 <div class="blog-card">
                         <div class="img-holder">
                             <img src="assets/imgs/UPNA_logo.png" alt="UPNA">
                         </div>
