--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
                 <!-- blog-card -->
             </div>
         </div>
+    </section>
+    <section class="section">
         <div class="container">
             <h2 class="mb-5">Academic<span class="text-danger"> Path</span></h2>
             <div class="row">
