--- a/index.html
+++ b/index.html
@@ -240,11 +240,13 @@
                             <a href="https://sigarra.up.pt/feup/pt/web_page.inicial" target="_blank" rel="FEUP">Faculty of Engineering, University of Porto | Porto, PT</a>
                         </p>
 
-                        <p><blockquote cite="https://sigarra.up.pt/feup/en/web_base.gera_pagina?p_pagina=31512">Graduates are expected to be able to support decision-making in organizations, being active agents of change and innovation.
+                        <blockquote cite="https://sigarra.up.pt/feup/en/web_base.gera_pagina?p_pagina=31512"> "Graduates are expected to be able to support decision-making in organizations, being active agents of change and innovation.
                             It is intended that graduates will initially perform management support functions in preparing decisions in various 
                             functional areas, including production management, logistics, asset management, quality management, information systems, 
                             process modelling, financial analysis, management control, strategy or marketing.
-                            Those who demonstrate leadership skills can reach management positions or start their own businesses.</blockquote></p>
+                            Those who demonstrate leadership skills can reach management positions or start their own businesses."
+                            - FEUP website
+                        </blockquote>
 
                         <p>Final Grade: 16 /20 (B)</p>
                         
