--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@
                             <a href="https://sigarra.up.pt/feup/pt/web_page.inicial" target="_blank" rel="FEUP">Faculty of Engineering, University of Porto | Porto, PT</a>
                         </p>
 
+                        <p>FEUP's courses are recognised by ENAEE (European Network for Accreditation of Engineering Education) through the EUR-ACE Quality Label.</p>
+
                         <blockquote cite="https://sigarra.up.pt/feup/en/web_base.gera_pagina?p_pagina=31512"> "Graduates are expected to be able to support decision-making in organizations, being active agents of change and innovation.
                             It is intended that graduates will initially perform management support functions in preparing decisions in various 
                             functional areas, including production management, logistics, asset management, quality management, information systems, 
