--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             <img src="assets/imgs/UPNA_logo.png" alt="UPNA">
                         </div>
                         <div class="date-holder">
-                            <p><b>2021-2022</b></p>
+                            <p><b class="text-danger">2021-2022</b></p>
                         </div>
                         <div class="content-holder">
                             <h6 class="title">Eramus +</h6>
