--- a/index.html
+++ b/index.html
@@ -264,9 +264,8 @@
                  <div class="blog-card">
                         <div class="img-holder">
                             <img src="assets/imgs/UPNA_logo.png" alt="UPNA">
-                        </div>
-                        <div class="date-holder">
-                            <p><b class="text-danger">2021-2022</b></p>
+                            
+                                <p><b class="date-holder">2021-2022</b></p>
                         </div>
                         <div class="content-holder">
                             <h6 class="title">Eramus +</h6>
