--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <div class="img-holder">
                             <img src="assets/imgs/UPNA_logo.png" alt="UPNA">
                             
-                                <p><b class="date-holder">2021-2022</b></p>
+                                <b class="date-holder">2021-2022</b>
                         </div>
                         <div class="content-holder">
                             <h6 class="title">Eramus +</h6>
