--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <div class="img-holder">
                             <img src="assets/imgs/UPNA_logo.png" alt="UPNA">
                             
-                                <b class="date-holder">2021-2022</b>
+                                <div class="date-holder"><b>2021-2022</b></div>
                         </div>
                         <div class="content-holder">
                             <h6 class="title">Eramus +</h6>
