--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                 <div class="blog-card">
                     <div class="img-holder">
                         <img src="assets/imgs/Accenture-Logo.png" alt="Accenture">
+                        <div class="date-holder"><b>2022-Present</b></div>
                     </div>
                     <div class="content-holder">
                         <h6 class="title">SAP Technical Consultant</h6>
@@ -192,6 +193,7 @@
                 <div class="blog-card">
                     <div class="img-holder">
                         <img src="assets/imgs/LIPOR-Logo.png" alt="LIPOR">
+                        <div class="date-holder"><b>2022</b></div>
                     </div>
                     <div class="content-holder">
                         <h6 class="title">Internship and Thesis development</h6>
@@ -232,6 +234,7 @@
                 <div class="blog-card">
                     <div class="img-holder">
                         <img src="assets/imgs/FEUP_logo.png" alt="FEUP">
+                        <div class="date-holder"><b>2017-2022</b></div>
                     </div>
                     <div class="content-holder">
                         <h6 class="title">Bachelor & Master in Industrial Engineering and Management</h6>
