--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
             
         <p> Finally, I seek both personal and professional growth, and I value work-life balance,
             so I have a wide range of interests and hobbies.
+
         </p>
 
-        <p>Throughout this website, I'll guide you to dive a little into my world, and you'll be able find out more about me. I hope you enjoy it! </p>
-
-        <p>Don't hesitate to contact me, if you're interested or curious to find out more. I'd love to discuss ideas with you!
-           <a href="#" target="_blank" rel="Contacts">Contacts</a></p>
+        <p>Throughout this website, I'll guide you to dive a little into my world, and you'll be able find out more about me. I hope you enjoy it!
+           Don't hesitate to contact me, if you're interested or curious to find out more. I'd love to discuss ideas with you!
+           <a href="#" target="_blank" rel="Contacts"> Contacts</a></p>
 
         <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
         <!-- <div id="about" class="row about-section">
