--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             I had a opportunity to gain some experience in application development, as well as, process design and planning.
             I'm particularly interested in topics related to project management, programming and people management.</p>
             
-        <p> Finally, I seek both personal and professional growth, and I value work-life balance,
+        <p> Finally, I seek both, personal and professional growth, and I value work-life balance,
             so I have a wide range of interests and hobbies.
 
         </p>
 
         <p>Throughout this website, I'll guide you to dive a little into my world, and you'll be able find out more about me. I hope you enjoy it!
-           Don't hesitate to contact me, if you're interested or curious to find out more. I'd love to discuss ideas with you!
+           Don't hesitate to contact me, if you're interested or curious to find out more. I'd love to discuss some ideas with you!
            <a href="#" target="_blank" rel="Contacts"> Contacts</a></p>
 
         <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
@@ -178,7 +178,10 @@
                             <a href="https://www.accenture.com/pt-pt" target="_blank" rel="Accenture">Accenture</a>
                         </p>
 
-                        <ul>
+                        <p>Accenture is a global professional services company specializing in consulting, technology services, and digital transformation.</p>
+
+                        <!-- <p>By working in the technology department my main responsibilities include:</p> -->
+                        <ul>By working in the technology department my main responsibilities include:
                             <li>Work on an International Project;</li>
                             <li>Identify scope, define requirements, and create functional and technical specifications;</li>
                             <li>Analyze, design, build, and test new components or enhancements to existing modules, including reporting and analysis capabilities;</li>
@@ -257,8 +260,7 @@
                             functional areas, including production management, logistics, asset management, quality management, information systems, 
                             process modelling, financial analysis, management control, strategy or marketing.
                             Those who demonstrate leadership skills can reach management positions or start their own businesses."
-                           </blockquote>
-                        - FEUP website
+                           </blockquote> - FEUP website
                         </p>
 
                         <p>Final Grade: 16 /20 (B)</p>
