--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
 
                         <p>Accenture is a global professional services company specializing in consulting, technology services, and digital transformation.</p>
 
-                        <!-- <p>By working in the technology department my main responsibilities include:</p> -->
-                        <ul>By working in the technology department my main responsibilities include:
+                        <p>
+                            By working in the technology department my main responsibilities include:</p>
+                        <ul>
                             <li>Work on an International Project;</li>
                             <li>Identify scope, define requirements, and create functional and technical specifications;</li>
                             <li>Analyze, design, build, and test new components or enhancements to existing modules, including reporting and analysis capabilities;</li>
