--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="#portfolio" class="nav-link">Skills/Awards</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#blog" class="nav-link">Interests/Hobbies</a>
+                        <a href="#hobbies" class="nav-link">Interests/Hobbies</a>
                     </li>
                     <li class="nav-item last-item">
                         <a href="#contact" class="nav-link">Contacts</a>
@@ -181,7 +181,7 @@
                         <p>Accenture is a global professional services company specializing in consulting, technology services, and digital transformation.</p>
 
                         <p>
-                            By working in the technology department my main responsibilities include:</p>
+                            By working in the technology department, my main responsibilities include:</p>
                         <ul>
                             <li>Work on an International Project;</li>
                             <li>Identify scope, define requirements, and create functional and technical specifications;</li>
@@ -618,23 +618,23 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section class="section bg-custom-gray" id="portfolio">
+    <!-- Hobbies/interests-->
+    <section class="section bg-custom-gray" id="hobbies">
         <div class="container">
-            <h1 class="mb-5"><span class="text-danger">My</span> Portfolio</h1>
+            <h1 class="mb-5"><span class="text-danger">Interests</span> / Hobbies</h1>
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".new" class="active">
-                        New
+                        Athletics
                     </a>
                     <a href="#" data-filter=".advertising">
-                        Advertising
+                        Drawing
                     </a>
                     <a href="#" data-filter=".branding">
-                        Branding
+                        Lindy Hop
                     </a>
                     <a href="#" data-filter=".web">
-                        Web
+                        Kids' Parties
                     </a>
                 </div>
                 <div class="portfolio-container"> 
