--- a/index.html
+++ b/index.html
@@ -624,18 +624,10 @@
             <h1 class="mb-5"><span class="text-danger">Interests</span> / Hobbies</h1>
             <div class="portfolio">
                 <div class="filters">
-                    <a href="#" data-filter=".new" class="active">
-                        Athletics
-                    </a>
-                    <a href="#" data-filter=".advertising">
-                        Drawing
-                    </a>
-                    <a href="#" data-filter=".branding">
-                        Lindy Hop
-                    </a>
-                    <a href="#" data-filter=".web">
-                        Kids' Parties
-                    </a>
+                    <a href="#" data-filter=".new" class="active">Athletics</a>
+                    <a href="#" data-filter=".advertising">Drawing</a>
+                    <a href="#" data-filter=".branding">Lindy Hop</a>
+                    <a href="#" data-filter=".web">Kids' Parties</a>
                 </div>
                 <div class="portfolio-container"> 
                     <div class="col-md-6 col-lg-4 web new">
