--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
     <section class="section bg-custom-gray" id="hobbies">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">Interests</span> / Hobbies</h1>
+            <p>escrever algo geral dos hobbies, falando do desporto, artes, musica, viagens. Falar dos grupos de associaçoes bem como do que cada hobbie me trouxe, e achivements</p>
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".new" class="active">Athletics</a>
