--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
             
         <p> Finally, I seek both, personal and professional growth, and I value work-life balance,
             so I have a wide range of interests and hobbies.
-
         </p>
 
         <p>Throughout this website, I'll guide you to dive a little into my world, and you'll be able find out more about me. I hope you enjoy it!
@@ -619,6 +618,9 @@
     </section>
 
     <!-- Hobbies/interests-->
+    <div class = "container_title hobbies" id="hobbies">
+        <h4 class="subtitle" >Hobbies/interests</h4>
+     </div>
     <section class="section bg-custom-gray" id="hobbies">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">Interests</span> / Hobbies</h1>
