--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 
     <!-- Hobbies/interests-->
     <div class = "container_title hobbies" id="hobbies">
-        <h4 class="subtitle" >Hobbies/interests</h4>
+        <h4 class="subtitle" >Interests/Hobbies</h4>
      </div>
     <section class="section bg-custom-gray" id="hobbies">
         <div class="container">
