--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#portfolio" class="nav-link">Skills/Awards</a>
+                        <a href="#skills" class="nav-link">Skills/Awards</a>
                     </li>
                     <li class="nav-item">
                         <a href="#hobbies" class="nav-link">Interests/Hobbies</a>
@@ -295,6 +295,10 @@
         </div>
 
     </section>
+
+    <div class = "container_title skills" id="skills" >
+        <h4 class="subtitle" >Skills / Awards</h4>
+     </div>
 
     <section class="section">
 
