--- a/index.html
+++ b/index.html
@@ -298,13 +298,11 @@
 
     <div class = "container_title skills" id="skills" >
         <h4 class="subtitle" >Skills / Awards</h4>
-     </div>
-
+    </div>
     <section class="section">
-
         <div class="container">
-            <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
-            <div class="row">
+            <!-- <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2> -->
+            <!-- <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <div class="card">
                        <div class="card-header">
@@ -410,7 +408,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
