--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         </div>
     </section>
 
-    <section class="section bg-dark text-center">
+    <!-- <section class="section bg-dark text-center">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6 col-lg-3">
@@ -617,7 +617,7 @@
             <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
             <button class="btn bg-primary w-lg" >Hire me</button>
         </div>
-    </section>
+    </section> -->
 
     <!-- Hobbies/interests-->
     <div class = "container_title hobbies" id="hobbies">
