--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
                             
                         </div>
                     </div>
-                </div>
+                </div> -->
+
                 <div class="col-lg-4">
                     <div class="card">
                        <div class="card-header">
@@ -407,8 +408,12 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
-            </div> -->
+            <!-- </div> --> -->
+
+
+
         </div>
     </section>
 
