--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             so I have a wide range of interests and hobbies.
         </p>
 
-        <p>Throughout this website, I'll guide you to dive a little into my world, and you'll be able find out more about me. I hope you enjoy it!
+        <p>Throughout this website, I'll guide you to dive a little into my world, and you'll be able to find out more about me. I hope you enjoy it!
            Don't hesitate to contact me, if you're interested or curious to find out more. I'd love to discuss some ideas with you!
            <a href="#" target="_blank" rel="Contacts"> Contacts</a></p>
 
@@ -301,7 +301,7 @@
     </div>
     <section class="section">
         <div class="container">
-            <!-- <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2> -->
+            <h2 class="mb-5"><span class="text-danger">My</span> Skills</h2>
             <!-- <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <div class="card">
@@ -352,14 +352,16 @@
                 </div> -->
 
                 <div class="col-lg-4">
+            
                     <div class="card">
                        <div class="card-header">
                             <div class="pull-left">
-                                <h4 class="mt-2">Skills</h4>
+                                <h4 class="mt-2">Tech Skills</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
-                        <div class="card-body pb-2">
+                        <div class="card-body">
+                           <P>SAP ISU; HTML; CSS; Microsoft Excel; VBA; Phyton; SQL; SPSS; RStudio; Solidworks; Autocad; Anylogic; Minitab; Tableau; LaTeX; Outsystems (basics)</P>
                            <h6>hTL5 &amp; CSS3</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 97%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -386,6 +388,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-4">
+
                     <div class="card">
                        <div class="card-header">
                             <div class="pull-left">
