--- a/index.html
+++ b/index.html
@@ -361,31 +361,8 @@
                             </div>
                         </div>
                         <div class="card-body">
+                           
                            <P>SAP ISU; HTML; CSS; Microsoft Excel; VBA; Phyton; SQL; SPSS; RStudio; Solidworks; Autocad; Anylogic; Minitab; Tableau; LaTeX; Outsystems (basics)</P>
-                           <h6>hTL5 &amp; CSS3</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 97%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>JavaScript</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>PHP</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>SQL</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>Laborum</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>Tempora</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -415,7 +392,7 @@
                     </div>
 
                 </div>
-            <!-- </div> --> -->
+            <!-- </div> -->
 
 
 
@@ -639,17 +616,17 @@
             <p> falta ainda a imagem de inicio de secção, fotos e escrever introdução: algo geral dos hobbies, falando do desporto, artes, musica, viagens. Falar dos grupos de associaçoes bem como do que cada hobbie me trouxe, e achivements</p>
             <div class="portfolio">
                 <div class="filters">
-                    <a href="#" data-filter=".new" class="active">Athletics</a>
+                    <a href="#" data-filter=".Athletics" class="active">Athletics</a>
                     <a href="#" data-filter=".advertising">Drawing</a>
                     <a href="#" data-filter=".branding">Lindy Hop</a>
                     <a href="#" data-filter=".web">Kids' Parties</a>
                 </div>
                 <div class="portfolio-container"> 
-                    <div class="col-md-6 col-lg-4 web new">
+                    <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/atlethics7.mp4" class="img-fluid" alt="video">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/atlethics7.mp4"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
