--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
                 <div class="portfolio-container"> 
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/atlethics7.mp4" class="img-fluid" alt="video">
+                            <img src="assets/imgs/atlethics7.mov" class="img-fluid" alt="video">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/atlethics7.mp4"></a>
+                                <a class="img-popup" href="assets/imgs/atlethics7.mov"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
